TWINS-362: serialization and search cut